# hamurabi

./: .clang-format  .gitignore  .vimrc  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  br  build.sh
cmake/: FindCheck.cmake
hooks/: pre-commit
include/: banned.h  hamurabi.h
scripts/: setup_hooks.sh
src/: hamurabi.c  main.c
test/: check_hamurabi.c
